# matrix-quote-web

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.json  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: demo.py  deps.py  explain.py  insights.py  logging_config.py  main.py  middleware.py  paths.py  pdf.py  quote_ids.py  quotes_storage.py  schemas_api.py  storage.py
backend/app/routes/: admin.py  insights.py  metrics.py  quote.py  quotes.py
backend/app/templates/: quote_pdf.css  quote_pdf.html
core/: ui.py
demo_assets/models/: bld100_actual_hours_v1.joblib  cp50_actual_hours_v1.joblib  doc190_actual_hours_v1.joblib  ee20_actual_hours_v1.joblib  inst160_actual_hours_v1.joblib  me10_actual_hours_v1.joblib  me15_actual_hours_v1.joblib  me230_actual_hours_v1.joblib  pm200_actual_hours_v1.joblib  rb30_actual_hours_v1.joblib  shp150_actual_hours_v1.joblib  trv180_actual_hours_v1.joblib
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: quote.ts  (+1 more)
scripts/: generate_demo_assets.py  migrate_to_demo_repo.sh  vercel_build.sh
tests/: conftest.py  test_admin_auth.py  test_demo_mode.py  test_explain.py  test_health.py  test_insights.py  test_metrics_routes.py  test_pdf_export.py  test_q7_bundle_cache.py  test_quote_endpoint_explain.py  test_quote_routes.py  test_quotes_routes.py  test_quotes_storage.py  test_s10_url_fetcher.py  test_s11_prod_docs.py  test_s12_iss_claim.py
(+73 files in other folders)
