[project]
name = "matrix-quote-web-backend"
version = "0.1.0"
description = "FastAPI wrapper for the Matrix quoting engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "gunicorn>=21.2",
    "python-multipart>=0.0.9",
    "PyJWT>=2.8,<3",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "pandas",
    "numpy",
    "scikit-learn",
    "joblib",
    "openpyxl",
    "pyarrow",
    "filelock>=3.13",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]  # FastAPI Depends() pattern uses function calls as defaults

[tool.ruff.lint.per-file-ignores]
"app/routes/*.py" = ["B008"]

[tool.pytest.ini_options]
pythonpath = [".."]
testpaths = ["../tests"]
asyncio_mode = "auto"
